<package format="2">
  <name>cob_bringup_sim</name>
  <version>0.6.4</version>
  <description>This package provides launch files for starting a simulated Care-O-bot.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_bringup_sim</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_default_env_config</exec_depend>
  <exec_depend>cob_default_robot_config</exec_depend>
  <exec_depend>cob_gazebo_worlds</exec_depend>
  <exec_depend>cob_gazebo</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
