<package>
  <name>cob_gazebo</name>
  <version>0.6.0</version>
  <description>Launch files and tools for 3D simulation of Care-O-bot in gazebo simulator.</description>
  
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_gazebo</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>cob_hardware_config</run_depend>
  <run_depend>cob_controller_configuration_gazebo</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>cob_script_server</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>

  <export>

  </export>
</package>
