<package format="2">
  <name>cob_gazebo</name>
  <version>0.6.6</version>
  <description>Launch files and tools for 3D simulation of Care-O-bot in gazebo simulator.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_gazebo</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_controller_configuration_gazebo</exec_depend>
  <exec_depend>cob_default_robot_config</exec_depend>
  <exec_depend>cob_gazebo_ros_control</exec_depend>
  <exec_depend>cob_hardware_config</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

</package>
