<package format="2">
  <name>cob_gazebo</name>
  <version>0.7.5</version>
  <description>Launch files and tools for 3D simulation of Care-O-bot in gazebo simulator.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_gazebo</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <author email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</author>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_bringup</exec_depend>
  <exec_depend>cob_default_robot_config</exec_depend>
  <exec_depend>cob_gazebo_ros_control</exec_depend>
  <exec_depend>cob_hardware_config</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>cob_supported_robots</test_depend>
  <test_depend>roslaunch</test_depend>

</package>
