<package format="2">
  <name>cob_gazebo_objects</name>
  <version>0.6.8</version>
  <description>This package provides some objects and furniture for gazebo simulation.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_gazebo_objects</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>

  <exec_depend>cob_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
