<package format="2">
  <name>cob_gazebo_worlds</name>
  <version>0.7.6</version>
  <description>This package provides some worlds for gazebo simulation.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_gazebo_worlds</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="jba@ipa.fhg.de">Jannik Abbenseth</maintainer>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <author email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</author>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_default_env_config</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>cob_default_env_config</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
