<package format="2">
  <name>cob_simulation</name>
  <version>0.6.7</version>
  <description>The cob_simulation stack includes packages to work with Care-O-bot within simulation environments, e.g. gazebo.</description>

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_simulation</url>
  <!-- <url type="bugtracker"></url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cob_bringup_sim</exec_depend>
  <exec_depend>cob_gazebo</exec_depend>
  <exec_depend>cob_gazebo_objects</exec_depend>
  <exec_depend>cob_gazebo_worlds</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
